# testing

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: codecov.yml  echo-on-pr-and-push.yml  echo-on-prs.yml  test.yml  workflow-to-depend-on.yml
old_workflows/: echo-on-pr-and-push.yml  workflow-to-depend-on.yml
src/testing/: testing.py  version.py
tests/: simple_test.py  testing_test.py
